# zenslam

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  STATISTICS_IMPLEMENTATION.md  test_option_simple
.github/: copilot-instructions.md
scripts/: bag_to_images.py
zenslam_app/: CMakeLists.txt
zenslam_app/include/: application.h  calibration.h  event.h  folder_options.h  folder_reader.h  imgui_controls_window.h  mono_folder_reader.h  mono_frame.h  opencv_window.h  options.h  pch.h  random_access_iterator.h  slam_thread.h  stereo_folder_reader.h  stereo_frame.h  thread_safe.h  utils.h  viewer.h  vtk_scene_window.h  window.h
zenslam_app/source/: application.cpp  calibration.cpp  folder_options.cpp  folder_reader.cpp  grid_detector.cpp  imgui_controls_window.cpp  main.cpp  mono_folder_reader.cpp  mono_frame.cpp  opencv_window.cpp  options.cpp  slam_thread.cpp  stereo_folder_reader.cpp  utils.cpp  verb.cpp  viewer.cpp  vtk_scene_window.cpp
zenslam_core/: CMakeLists.txt
zenslam_core/include/zenslam/: all_options.h  calibration.h  camera_calibration.h  camera_frame.h  correspondence_utils.h  detection_types.h  detector.h  essential_options.h  estimator.h  event.h  folder_options.h  folder_reader.h  formatters.h  frame_counts.h  frame_durations.h  frame_writer.h  gravity_estimator.h  grid_detector.h  groundtruth.h  gui_options.h  imu_calibration.h  inertial_predictor.h  integrator.h  integrator_types.h  keyframe_database.h  keyframe_lba.h  keyframe_options.h  keyframe_selector.h  keypoint.h  lba_options.h  line3d.h  local_bundle_adjustment.h  map.h  match_data.h  matcher.h  matching_utils.h  mono_folder_reader.h  mono_frame.h  motion.h  motion_predictor.h  (+37 more)
zenslam_core/include/zenslam/calibration/: calibration.h  camera_calibration.h  imu_calibration.h
zenslam_core/include/zenslam/detection/: correspondence_utils.h  descriptor_type.h  detection_algorithm.h  detection_options.h  detection_types.h  detector.h  feature_type.h  keyline_detector.h  keypoint_detector.h  keypoint_detector_grid.h  keypoint_detector_parallel.h  keypoint_detector_simple.h
zenslam_core/include/zenslam/frame/: camera.h  counts.h  durations.h  estimated.h  imu.h  processed.h  sensor.h  slam.h  stereo.h  system.h  tracked.h  writer.h
zenslam_core/include/zenslam/io/: folder_options.h  folder_reader.h  groundtruth.h  reader_thread.h  verb.h
zenslam_core/include/zenslam/mapping/: keyframe_database.h  keyframe_selector.h  triangulation_utils.h  triangulator.h
zenslam_core/include/zenslam/matching/: matcher.h  matching_utils.h
zenslam_core/include/zenslam/motion/: gravity_estimator.h  inertial_predictor.h  integrator.h  motion_predictor.h
zenslam_core/include/zenslam/optimization/: local_bundle_adjustment.h
zenslam_core/include/zenslam/place_recognition/: bow_database.h  bow_vocabulary.h
zenslam_core/include/zenslam/pose_estimation/: combined_estimator.h  common.h  line_estimator.h  point_estimator.h  pose_fusion.h
zenslam_core/include/zenslam/tracking/: keyline_tracker.h  keypoint_tracker.h  pyr_lk.h  tracker.h  tracking_utils.h
zenslam_core/include/zenslam/types/: event.h  keyline.h  line3d.h  line3d_cloud.h  map.h  map_point3d.h  point3d.h  point3d_cloud.h
zenslam_core/include/zenslam/utils/: estimator.h  pose_data.h  rigid_transform.h  utils.h  utils_opencv.h  utils_slam.h  utils_std.h
zenslam_core/source/: ZenSLAM_.ini  calibration.cpp  camera_calibration.cpp  camera_frame.cpp  correspondence_utils.cpp  detector.cpp  estimator.cpp  folder_options.cpp  folder_reader.cpp  frame_counts.cpp  frame_durations.cpp  frame_writer.cpp  gravity_estimator.cpp  grid_detector.cpp  groundtruth.cpp  gui_options.cpp  imu_calibration.cpp  integrator.cpp  keyframe_database.cpp  keyframe_lba.cpp  keyframe_selector.cpp  keyline.cpp  keypoint.cpp  line3d.cpp  local_bundle_adjustment.cpp  map.cpp  match_data.cpp  matcher.cpp  matching_utils.cpp  mono_folder_reader.cpp  mono_frame.cpp  motion.cpp  motion_predictor.cpp  options.cpp  options_parser.cpp  options_printer.cpp  options_writer.cpp  point3d.cpp  pose.cpp  preint.cpp  (+19 more)
zenslam_core/source/calibration/: calibration.cpp  camera_calibration.cpp  imu_calibration.cpp
zenslam_core/source/detection/: correspondence_utils.cpp  detector.cpp  keyline_detector.cpp  keypoint_detector.cpp  keypoint_detector_grid.cpp  keypoint_detector_parallel.cpp  keypoint_detector_simple.cpp
zenslam_core/source/frame/: camera.cpp  counts.cpp  durations.cpp  sensor.cpp  slam.cpp  stereo.cpp  writer.cpp
zenslam_core/source/io/: folder_options.cpp  folder_reader.cpp  groundtruth.cpp  verb.cpp
zenslam_core/source/mapping/: keyframe_database.cpp  keyframe_selector.cpp  triangulation_utils.cpp  triangulator.cpp
zenslam_core/source/matching/: matcher.cpp  matching_utils.cpp
zenslam_core/source/motion/: gravity_estimator.cpp  integrator.cpp  integrator_ugpm.cpp  motion_predictor.cpp
zenslam_core/source/optimization/: local_bundle_adjustment.cpp
zenslam_core/source/place_recognition/: bow_database.cpp  bow_vocabulary.cpp
zenslam_core/source/pose_estimation/: combined_estimator.cpp  line_estimator.cpp  point_estimator.cpp  pose_fusion.cpp
zenslam_core/source/tracking/: keyline_tracker.cpp  keypoint_tracker.cpp  pyr_lk.cpp  tracker.cpp  tracking_utils.cpp
zenslam_core/source/types/: event.cpp  keyline.cpp  keypoint.cpp  line3d.cpp  line3d_cloud.cpp  map.cpp  point3d.cpp  point3d_cloud.cpp
zenslam_core/source/utils/: estimator.cpp  pose.cpp  rigid_transform.cpp  utils.cpp  utils_opencv.cpp  utils_slam.cpp  utils_std.cpp
zenslam_docs/: MATCHER_UPDATE.md  QUICKREF.md  README.md  WEIGHTED_FUSION_DEBUG.md  WEIGHTED_POSE_FUSION.md  build_system.md  overview.md  (+13 more)
zenslam_metal/: CMakeLists.txt
zenslam_metal/include/zenslam_metal/: pyr_lk.h  pyr_lk_factory.h
zenslam_metal/source/: pyr_lk.cpp  pyr_lk.mm  pyr_lk_factory.cpp  pyr_lk_metal.mm
zenslam_tests/: CMakeLists.txt
zenslam_tests/source/: hello_test.cpp  imu_calibration_test.cpp  options_test.cpp  stereo_rectification_test.cpp  umeyama_test.cpp  zenslam_tests.cpp
(+34 files in other folders)
